; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ddb/extr_db_capture.c_db_capture_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ddb/extr_db_capture.c_db_capture_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@db_capture_inprogress = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Capture already started\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @db_capture_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @db_capture_start() #0 {
  %1 = load i32, i32* @db_capture_inprogress, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 @db_printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %6

5:                                                ; preds = %0
  store i32 1, i32* @db_capture_inprogress, align 4
  br label %6

6:                                                ; preds = %5, %3
  ret void
}

declare dso_local i32 @db_printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
